--- a/src/assets/styles/colors-list.scss
+++ b/src/assets/styles/colors-list.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   border-top: 1px solid black;
   overflow: auto;
+  user-select: none;
 
   &__element {
     display: grid;
