--- a/src/assets/styles/loading.scss
+++ b/src/assets/styles/loading.scss
@@ -2,6 +2,7 @@
   display: block;
   height: 100% !important;
   width: 100% !important;
+  margin-top: 77px;
   position: absolute;
   top: 0;
   left: 0;
@@ -9,6 +10,11 @@
   z-index: 4;
   &.hide {
     display: none;
+  }
+}
+@media screen and (max-width: 760px) {
+  .loadScreen {
+    margin-top: 40px;
   }
 }
 
